finished hmtl assignment

--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -3,4 +3,6 @@ What's the difference between "semantic" and "non-semantic" elements?
 
 # Answer
 
+Semantic elements are named after the actions they do. Non-semantic ones don't.
+
 # Teacher Feedback
