--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -3,5 +3,6 @@ What does it mean when a tag is a "child" of a "parent?".
 
 # Answer
 
+Its kind of another way saying something is nested within a block of code.
 
 # Teacher Feedback
