--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -6,3 +6,4 @@ What's the difference between "semantic" and "non-semantic" elements?
 Semantic elements are named after the actions they do. Non-semantic ones don't.
 
 # Teacher Feedback
+2/3. Try being more verbose! Describe what non-semantic elements are as well - they're used for grouping!
