--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -6,3 +6,4 @@ What does it mean when a tag is a "child" of a "parent?".
 Its kind of another way saying something is nested within a block of code.
 
 # Teacher Feedback
+3/3. Yes!
