--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -6,3 +6,9 @@ Where do html attributes go?
 Attributes go to the beginning of the HTML code.
 
 # Teacher Feedback
+2/3! You can be more explicit in your description. "HTML attributes go in the opening tag (or only tag if it's self closing)". Give a code snippet as well:
+
+```html
+<!-- Example of 'class' attribute -->
+<h1 class="mainTitle">Noah's Webpage</h1>
+```
